Application - add properties for test

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,10 @@ spring:
   profiles:
     active: prod
   datasource:
-    driverClassName: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3307/software_testing?useUnicode=true&charsetEncoding=UTF-8
     username: root
     password: admin@2020
   jpa:
     hibernate:
       dialect: com.mysql.cj.jdbc.Driver
-
